--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,8 @@
-application: voteorskip
+application: testapplicationasus 
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 
@@ -12,4 +13,4 @@ handlers:
   static_dir: voteorskip/static/js
   
 - url: .*
-  script: main.py
+  script: main.app
